# aos_auth

./: .gitignore  Cargo.toml  README.md  makefile
envs/: local.env
src/: atomics.rs  datalayer.rs  lib.rs  main.rs
src/app/: mod.rs  templates.rs  views.rs
src/auth/: forms.rs  hashing.rs  mod.rs  templates.rs  views.rs
src/auth/extractors/: authed_user.rs  mod.rs  user_session.rs
templates/: base.html  index.html  login.html
