[package]
authors = ["d. h. bradshaw <dhbradshaw@gmail.com>"]
default-run = "aos_auth"
edition = "2018"
license = "MIT"
name = "aos_auth"
version = "0.1.0"


[dependencies]
# Actix utilities -- StatusCode, Error, Cookie
actix-http = "2.2.0"

# actix-web http framework
actix-web = "3"

# Password hashing using argo II
argonautica = "0.2.0"

# Template rendering
askama = "0.10.5"

# Read environment variables from a file
dotenv = "0.15.0" 

# Logging
env_logger = "0.8.2" # Requires log as a dependency as well

# Helps with types for actix extractors 
futures-util = {version = "0.3.7", default-features = false} 

# Logging
log = "0.4.13"

# Serialization to and from sled, which just wants keys and values as bytes.
serde = "1.0.119" 
serde_json = "1"

# Persistance: Embedded key value database
sled = "0.34.6" 

# Required for cookies with actix-http
time = "0.2.25" 

# Handy for session keys and other unique ids.
uuid = {version = "0.8", features = ["serde", "v4"]}
